meja/tests/list.meja
let x = [1, 2, 3];

let y = [(1, 2, 3), (4, 5, 6), (7, 8, 9)];

let f = fun (l : list(bool)) : (bool, bool, bool) => {
  switch (l) {
    | [] => (false, false, false)
    | [a] => (a, false, false)
    | [a, b] => (a, b, false)
    | a :: b :: c :: _ => (a, b, c)
  };
};

let g = f([true, false, true]);

let (!) = fun (x : bool) => {
  switch (x) {
    | true => false
    | false => true
  };
};

let (+) = fun (x, y) => {
  switch (x, y) {
    | (false, false) => false
    | _ => true
  };
};

let h = [!true, !false, true + !false];

let i = true + false :: (!false) :: [];
